# database-seeding-rust

./: Cargo.toml
src/: common.rs  linkedin_company.json  main.rs  test.json
src/bdd/: linkedinDemographics.json  linkedinEducation.json  linkedinInterest.json  linkedinLocation.json  linkedin_all_core_items  linkedin_demographics.json  linkedin_education.json  linkedin_interest.json
src/items/: linkedin_company.rs  location_insert.rs  mod.rs
~/Desktop/notes /vscode-note/: domains.yaml  notes.yaml
