[package]
name = "rust-insert-locations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.5", features = ["with-serde_json-1"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-recursion = "1.0.4"
postgres-types = { version = "0.2.5", features = ["derive","with-serde_json-1"] }

